// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar responsive 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar width grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(243,243,243);
}

.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="grid c1"
    />
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c2"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c2"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c2"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c2"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with Title, X label, Y label 1`] = `
.c2 {
  font-size: 0.9em;
  text-anchor: middle;
}

.c3 {
  font-size: 0.9em;
  text-anchor: middle;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c4 {
  fill: rgb(8,104,172);
}

.c4:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

.c1 {
  font-size: 1.2em;
  text-anchor: middle;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="chart-title c1"
      height="270"
      width="540"
      x="270"
      y="10"
    >
      Test title
    </text>
    <text
      class="x-axis-label c2"
      height="270"
      width="540"
      x="270"
      y="290"
    >
      Test X label
    </text>
    <text
      class="y-axis-label c3"
      height="270"
      width="540"
      x="-135"
      y="-16"
    >
      Test Y label
    </text>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c4"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c4"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c4"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c4"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with X label rotation 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with dates 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c1"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c1"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c1"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with height 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 100px;
  width: 177.77777777777777px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="2.043010752688172"
        width="15.930388219544845"
        x="2.811244979919678"
        y="7.956989247311828"
      />
      <rect
        class="bar c1"
        height="7.526881720430108"
        width="15.930388219544845"
        x="21.5528781793842"
        y="2.473118279569892"
      />
      <rect
        class="bar c1"
        height="10"
        width="15.930388219544845"
        x="40.294511378848725"
        y="0"
      />
      <rect
        class="bar c1"
        height="8.602150537634408"
        width="15.930388219544845"
        x="59.03614457831325"
        y="1.397849462365592"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 10)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with source 1`] = `
.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c1 {
  font-size: 0.7em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="data-source c1"
      height="270"
      width="540"
      x="540"
      y="270"
    >
      Test source
    </text>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c2"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c2"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c2"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c2"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with source link 1`] = `
.c3 {
  fill: rgb(8,104,172);
}

.c3:hover {
  fill: rgb(0,84,152);
}

.c1 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  font-size: 0.7em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <a
      class="data-source-link c1"
      href="#"
      target="foo"
      title="bar"
    >
      <text
        class="data-source c2"
        height="270"
        width="540"
        x="540"
        y="270"
      />
    </a>
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c3"
        height="55.16129032258064"
        width="110.6024096385542"
        x="19.518072289156635"
        y="214.83870967741936"
      />
      <rect
        class="bar c3"
        height="203.2258064516129"
        width="110.6024096385542"
        x="149.63855421686748"
        y="66.7741935483871"
      />
      <rect
        class="bar c3"
        height="270"
        width="110.6024096385542"
        x="279.7590361445783"
        y="0"
      />
      <rect
        class="bar c3"
        height="232.25806451612902"
        width="110.6024096385542"
        x="409.87951807228916"
        y="37.741935483870975"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;

exports[`Bar with width 1`] = `
.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c0 {
  height: 56.25px;
  width: 100px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="dataviz-layer "
    >
      <rect
        class="bar c1"
        height="-6.89516129032258"
        width="0"
        x="0"
        y="-26.85483870967742"
      />
      <rect
        class="bar c1"
        height="-25.403225806451612"
        width="0"
        x="0"
        y="-8.346774193548388"
      />
      <rect
        class="bar c1"
        height="-33.75"
        width="0"
        x="0"
        y="0"
      />
      <rect
        class="bar c1"
        height="-29.032258064516128"
        width="0"
        x="0"
        y="-4.717741935483872"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, -33.75)"
    />
    <g
      class="axis-y "
    />
  </g>
</svg>
`;
